# DesignLibrary

./: .gitignore  CMakeLists.txt
DesignPattern/: CMakeLists.txt  liveqmlengine.cpp  metadata.cpp
DesignPatternTest/: CMakeLists.txt
DesignPatternTest/LiveEngineTest/: CMakeLists.txt
DesignPatternTest/MetaDataTest/: CMakeLists.txt  metadatatest.cpp
